--- a/src/Components/Main/Question/QuestionTypes/MultipleChoice.css
+++ b/src/Components/Main/Question/QuestionTypes/MultipleChoice.css
@@ -50,7 +50,7 @@
   }
 
   .question-multiple-choice .formControlLabel > .formControlLabel-label{
-    font-size: 20px;
+    font-size: 18px;
     padding-top: 10px;
     padding-left: 0;
   }
